--- a/package.json
+++ b/package.json
@@ -2,21 +2,33 @@
   "name": "stock-exchange-of-debtors",
   "version": "0.1.0",
   "private": true,
+  "main": "index.tsx",
+  "author": "Volodymyr Kovalchuk",
+  "license": "MIT",
   "dependencies": {
     "@types/jest": "24.0.15",
     "@types/node": "12.6.6",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "@types/react-redux": "7.1.1",
+    "axios": "0.19.0",
+    "bootstrap": "4.3.1",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "react-scripts": "3.0.1",
-    "typescript": "3.5.3"
+    "redux": "4.0.4",
+    "redux-saga": "1.0.5",
+    "ts-jest": "24.0.2",
+    "typesafe-actions": "4.4.2",
+    "typescript": "3.5.3",
+    "utility-types": "3.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "tslint -c tslint.json src/**/*.{ts,tsx} --fix --format verbose"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +44,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tslint": "5.18.0",
+    "tslint-config-prettier": "1.18.0",
+    "tslint-config-standard": "8.0.1",
+    "tslint-react": "4.0.0",
+    "tslint-react-hooks": "2.2.1"
   }
 }
